fix: responsivity on smaller screens

--- a/src/components/MorphingTextSVG.css
+++ b/src/components/MorphingTextSVG.css
@@ -1,6 +1,5 @@
 #bannerSVG {
     animation: backgroundChange 30s infinite;
-    background-repeat: repeat-x;
   }
   
   @keyframes backgroundChange {
